Thu Dec 13 13:14:50 2007  Søren Sandmann  <sandmann@redhat.com>

	* Add RandR 1.2 support

	- New monitors_changed signal - New API to get width/height of
	  monitors, and the name of the plug

2007-12-13  Kristian Rietveld  <kris@imendio.com>

	* gtk/tests/liststore.c:
	* gtk/tests/treestore.c: test the move and swap functions on a
	store with only one node.

2007-12-13  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktestutils.c (gtk_test_init): add a call to
	g_test_bug_base().

	* gtk/tests/treeview-scrolling.c: add g_test_bug() calls to
	appriopriate tests.

2007-12-13  Kristian Rietveld  <kris@imendio.com>

	* gtk/tests/liststore.c:
	* gtk/tests/treestore.c: start composing tests for the list and tree
	store.

	* gtk/tests/treeview-scrolling.c: added automated tests for
	GtkTreeView's scrolling "subsystem".

	* gtk/tests/Makefile.am: updated; added new test programs.

2007-12-13  Mathias Hasselmann  <mathias@openismus.com>

	Make the code compile again after the GdkAppLaunchContext changes.

	* configure.in: Add gio-2.0 to GDK_PACKAGES.
	* gdk/gdkinternals.h: Include <gio/gappinfo.h>.

2007-12-12  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkapplaunchcontext.c: Add docs

2007-12-12  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkapplaunchcontext.[hc]: Implement GAppLaunchContext 
	in gdk, providing startup notification.  (#503203)

	* gdk/x11/gdkapplaunchcontext-x11.c: 
	* gdk/win32/gdkapplaunchcontext-win32.c:
	* gdk/quartz/gdkapplaunchcontext-quartz.c: 
	* gdk/directfb/gdkapplaunchcontext-directfb.c: Backend-specific
	parts. All but X11 are just empty stubs for now.

	* gdk/gdk.symbols:
	* gdk/gdkinternals.h:
	* gdk/Makefile.am:
	* gdk/x11/Makefile.am: 
	* gdk/win32/Makefile.am: 
	* gdk/quartz/Makefile.am: 
	* gdk/directfb/Makefile.am: Necessary glue.

2007-12-12  Mathias Hasselmann  <mathias@openismus.com>

	* gtk/gtkdnd.c: Another attempt to improve gtk_drag_dest_set docs.

2007-12-11  Attilio Fiandrotti  <attilio.fiandrotti@gmail.com>
